# zephyr-tsn-apps

./: .gitignore  LICENSE  README.md  SBOM.spdx.json  build_apps.sh  build_apps_completion.bash  west.yml
apps/networking/: CMakeLists.txt  Kconfig  README.md  build.sh  prj.conf
apps/networking/boards/: mimxrt1180_evk_mimxrt1189_cm33.overlay
apps/networking/src/: main.c
apps/tsn_app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  overlay-primary-core.conf  prj.conf  sysbuild.cmake
apps/tsn_app/boards/: mimxrt1180_evk_mimxrt1189_cm33.overlay
apps/tsn_app/common/: shared_config.c  shared_config.h  system_config.c  system_config.h  tsn_app.c  tsn_app.h
apps/tsn_app/secondary/: CMakeLists.txt  Kconfig  genavb_sdk.cmake
apps/tsn_app/secondary/boards/: mimxrt1180_evk_mimxrt1189_cm7.conf  mimxrt1180_evk_mimxrt1189_cm7.overlay
apps/tsn_app/secondary/src/: configs.c  main.c
apps/tsn_app/secondary/src/boards/evkmimxrt1180/cm7/: genavb_sdk.c
apps/tsn_app/src/: configs.c  main.c
apps/tsn_app/src/boards/evkmimxrt1180/cm33/: genavb_sdk.c  genavb_sdk.h
apps/tsn_init/: CMakeLists.txt  Kconfig  Kconfig.multicore  Kconfig.sysbuild  genavb_sdk.cmake  overlay-primary-core.conf  prj.conf  sysbuild.cmake
apps/tsn_init/boards/: mimxrt1180_evk_mimxrt1189_cm33.conf  mimxrt1180_evk_mimxrt1189_cm33.overlay
apps/tsn_init/common/: gavb_stack.c  gavb_stack.h  shared_config.c  system_config.c  system_config.h
apps/tsn_init/secondary/: CMakeLists.txt  Kconfig  genavb_sdk.cmake  prj.conf
apps/tsn_init/secondary/boards/: mimxrt1180_evk_mimxrt1189_cm7.conf  mimxrt1180_evk_mimxrt1189_cm7.overlay
apps/tsn_init/secondary/src/: configs.c  main.c
apps/tsn_init/secondary/src/boards/evkmimxrt1180/cm7/: board.c  board.h  genavb_sdk.h
apps/tsn_init/src/: configs.c  main.c
apps/tsn_init/src/boards/evkmimxrt1180/cm33/: board.c  board.h  clock_config.c  clock_config.h  genavb_sdk.h  pin_mux.c  pin_mux.h
apps/tsn_init/src/common/: configs.c  gavb_stack.c  genavbtsn_eth.c  system_config.c  system_config.h
common/: relocation.cmake
common/cmake/: relocation.cmake
common/configs/: Kconfig.tsn_apps  base.conf  base_secondary.conf  cpu-load.conf  fs.conf  logging.conf  logging_extra_buf.conf  net.conf  net_ipv6.conf  runtime-stats.conf  shell.conf
common/libs/genavb_shell/: genavb_fdb.c  genavb_fp.c  genavb_frer.c  genavb_hsr.c  genavb_psfp.c  genavb_qbv.c  genavb_shell.c  genavb_shell.cmake  genavb_shell.h  genavb_stream_identification.c  genavb_vlan.c  shell_config.h
common/libs/sys_heap_stats/: Kconfig  sys_heap_stats.c  sys_heap_stats.cmake
common/linker/: fsl_mem_ops.ld  genavb_rodata.ld  libc_itcm.ld  sw_isr_table.ld
common/overlays/: mimxrt1180_evk_mimxrt1189_cm33_ocram1_ram.overlay  nxp_rt118x_cm33_memory.overlay  nxp_rt118x_cm33_multicore.overlay  nxp_rt118x_tune_interrupt_priorities.overlay
common/soc/imxrt118x/cm7/: mpu_regions.c
common/src/: early_mem.c  gavb_stack.c  gavb_stack.h  genavbtsn_eth.c  genavbtsn_eth.h  init_sync.c  init_sync.h  networking_config.c  networking_config.h  storage.c  storage.h  storage_app.c  storage_config.h
common/src/boards/evkmimxrt1180/cm33/: board.c  board.h  clock_config.c  clock_config.h  pin_mux.c  pin_mux.h
doc/: README.md
doc/01_initial_preparation/: 01_evaluation_boards_description_and_supported_roles.md  02_flashing_application_images.md  03_serial_terminal.md  04_preparing_boards_for_tsn_operations.md  05_tsn_network_configuration_settings.md
doc/02_example_applications/2_01_application_components/: 01_zephyr_networking.md  02_tsn_bridge_tsn_init.md  03_tsn_app.md
doc/02_example_applications/2_02_evaluation_applications/: 01_zephyr_networking_i_mx_rt118x.md  02_tsn_bridge_tsn_init_i_mx_rt118x.md  03_tsn_app_i_mx_rt118x.md
doc/03_evaluation_use_cases/: 01_zephyr_networking_i_mx_rt118x.md  02_tsn_bridge_tsn_init_i_mx_rt118x.md  03_tsn_app_i_mx_rt118x.md
doc/04_more_on_evaluation_usage/: 01_using_the_built_in_shell.md  02_using_configuration_settings.md  03_common_configuration.md  04_endpoint_configuration.md  05_bridge_configuration_i_mx_rt118x.md  06_tsn_network_configuration.md  07_pulse_per_second_pps_signal.md  08_genavb_tsn_stack_logs.md  09_example_applications_logs.md
dts/bindings/genavbtsn/: genavbtsn-eth.yaml
